--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -2,11 +2,12 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '822548757856657',
+      appId      : '418712868463109',
       cookie     : true,
       xfbml      : true,
       version    : 'v2.8'
     });
+    FB.AppEvents.logPageView();   
   };
 
   (function(d, s, id){
